# ABDNeural

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_err_mpe.txt  build_error.txt  build_error_10.txt  build_error_11.txt  build_error_12.txt  build_error_13.txt  build_error_14.txt  build_error_2.txt  build_error_3.txt  build_error_4.txt  build_error_5.txt  build_error_6.txt  build_error_7.txt  build_error_8.txt  build_error_9.txt  build_failure_phase01.txt  build_full_output.txt  build_full_output_ascii.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_utf8.txt  build_log_utf8_2.txt  build_log_utf8_3.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_6.txt  build_output_audio.txt  build_output_audio_retry.txt  build_output_clean.txt  build_output_clean_2.txt  build_output_clean_3.txt  build_output_clean_4.txt  build_output_clean_5.txt  build_output_clean_6.txt  (+100 more)
.agent/rules/: reglas.md
DOC/: 0 - introducción.docx  1 - inicio.docx  10.docx  11.docx  12.docx  13.docx  14.docx  15.docx  16.docx  2 -NEXUS_Architecture_Specification.md.docx  3 - ParameterDefinitions.h  4 - NEXUS_CodeStandards_Examples.md.docx  5 - AI_DEVELOPER_BRIEFING.md.docx  6 - DELIVERY_CHECKLIST.md.docx  7 - new features .docx  8 - new features ii.docx  9.docx  ~$10.docx  ~$9.docx
DOCS/: AUDIT_REPORT_2026-01-30.md  CRITICAL_BLOCKERS_FINAL.md  CRITICAL_ISSUES_EXTENDED.md  IMPLEMENTATION_PLAN_CRITICAL_FIXES.md
DOCS/ARCHITECTURE/: MODEL_MAKER_PLAN.MD
DOCS/PLANS/: ROADMAP.MD
DOCS/bundle_code/: CONTROL_FILES_202601282219.txt  CONTROL_FILES_202601282222.txt  CONTROL_FILES_202601292241.txt  CONTROL_FILES_202601301229.txt  CONTROL_FILES_202601301527.txt
DocsAnalyzed/: 0 - introducción.docx.txt  1 - inicio.docx.txt  10.docx.txt  11.docx.txt  12.docx.txt  13.docx.txt  14.docx.txt  15.docx.txt  16.docx.txt  2 -NEXUS_Architecture_Specification.md.docx.txt  4 - NEXUS_CodeStandards_Examples.md.docx.txt  5 - AI_DEVELOPER_BRIEFING.md.docx.txt  6 - DELIVERY_CHECKLIST.md.docx.txt  8 - new features ii.docx.txt  9.docx.txt
Resources/: ModelMaker.rc  NEURONiK.rc
Scripts/: manage.ps1  update_version.ps1
Source/Common/: SpectralModel.h
Source/Core/: BuildVersion.h
Source/DSP/: BaseEngine.cpp  BaseEngine.h  DSPUtils.h  ISynthesisEngine.h  IVoice.h
Source/DSP/CoreModules/: Envelope.cpp  Envelope.h  FilterBank.cpp  FilterBank.h  LFO.cpp  LFO.h  NeuronikEngine.cpp  NeuronikEngine.h  NeurotikEngine.cpp  NeurotikEngine.h  Oscillator.cpp  Oscillator.h  Resonator.cpp  Resonator.h  ResonatorBank.cpp  ResonatorBank.h
Source/DSP/Effects/: Chorus.h  Delay.h  Reverb.h  Saturation.h
Source/DSP/Synthesis/: AdditiveVoice.cpp  AdditiveVoice.h  NeurotikVoice.cpp  NeurotikVoice.h  ResonatorSound.h  ResonatorVoice.cpp  ResonatorVoice.h
Source/Main/: Main.cpp  MidiMappingManager.cpp  MidiMappingManager.h  ModulationTargets.h  NEURONiKEditor.cpp  NEURONiKEditor.h  NEURONiKProcessor.cpp  NEURONiKProcessor.h  NEXUSEditor.cpp  NEXUSEditor.h  NEXUSProcessor.cpp  NEXUSProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/ModelMaker/: Main.cpp  MainComponent.cpp  MainComponent.h  ModelMakerWidgets.h  Version.h
Source/ModelMaker/Analysis/: SpectralAnalyzer.cpp  SpectralAnalyzer.h
Source/Serialization/: PresetManager.cpp  PresetManager.h
Source/State/: ParameterDefinitions.h
Source/UI/: CustomUIComponents.cpp  CustomUIComponents.h  EnvelopeVisualizer.h  HelpDialog.h  LcdDisplay.cpp  LcdDisplay.h  LcdMenuManager.h  MidiLearner.cpp  MidiLearner.h  ParameterPanel.cpp  ParameterPanel.h  SpectralVisualizer.cpp  SpectralVisualizer.h  ThemeManager.cpp  ThemeManager.h  XYPad.cpp  XYPad.h
Source/UI/Browser/: PresetBrowser.cpp  PresetBrowser.h  PresetListModels.h
Source/UI/Panels/: FXPanel.cpp  FXPanel.h  FilterEnvPanel.cpp  FilterEnvPanel.h  ModulationPanel.cpp  ModulationPanel.h  OscillatorPanel.cpp  OscillatorPanel.h  PresetPanel.cpp  PresetPanel.h
TEMP/Scripts/: UpdateVersion.cmake  manage.ps1
Versiones compiladas/NEURONiK_ModelMaker/: Release - Acceso directo.lnk
build_neuronik/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  NEURONiK.vcxproj  NEURONiK.vcxproj.filters  NEURONiK_All.vcxproj  NEURONiK_Common.vcxproj  NEURONiK_Common.vcxproj.filters  NEURONiK_ModelMaker.vcxproj  NEURONiK_ModelMaker.vcxproj.filters  NEURONiK_ModelMaker_rc_lib.vcxproj  NEURONiK_ModelMaker_rc_lib.vcxproj.filters  NEURONiK_Standalone.vcxproj  NEURONiK_Standalone.vcxproj.filters  NEURONiK_Synthesizer.sln  NEURONiK_VST3.vcxproj  NEURONiK_VST3.vcxproj.filters  NEURONiK_rc_lib.vcxproj  NEURONiK_rc_lib.vcxproj.filters  NEURONiK_vst3_helper.vcxproj  NEURONiK_vst3_helper.vcxproj.filters  UpdateVersion.vcxproj  UpdateVersion.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_neuronik/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln
build_neuronik/JUCE/modules/: INSTALL.vcxproj  INSTALL.vcxproj.filters
build_neuronik/JUCE/tools/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEToolsExport.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_neuronik/NEURONiK_Common.dir/Debug/: NEURONiK_Common.lib.recipe
build_neuronik/NEURONiK_Standalone.dir/Debug/: NEURONiK.res  (+1 more)
build_nexus/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  NEURONiK.vcxproj  NEURONiK_All.vcxproj  NEURONiK_Standalone.vcxproj  NEURONiK_Standalone.vcxproj.filters  NEURONiK_Synthesizer.sln  NEURONiK_VST3.vcxproj  NEURONiK_VST3.vcxproj.filters  NEURONiK_rc_lib.vcxproj  NEURONiK_rc_lib.vcxproj.filters  NEURONiK_vst3_helper.vcxproj  NEXUS.vcxproj  NEXUS.vcxproj.filters  NEXUS_All.vcxproj  NEXUS_Standalone.vcxproj  NEXUS_Standalone.vcxproj.filters  NEXUS_Synthesizer.sln  NEXUS_VST3.vcxproj  NEXUS_VST3.vcxproj.filters  NEXUS_rc_lib.vcxproj  NEXUS_rc_lib.vcxproj.filters  NEXUS_vst3_helper.vcxproj  NEXUS_vst3_helper.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_nexus/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln
(+227 files in other folders)
